# gstd-1.x

./: configure.ac  meson.build
debian/: changelog
gstd/: Makefile.am  gstd.c  gstd_parser.c  meson.build
libgstc/c/: libgstc.c
libgstc/python/: setup.py
libgstd/: Makefile.am  libgstd.c  libgstd.h  libgstd_assert.h  libgstd_json.c  libgstd_json.h  libgstd_parser.c  libgstd_parser.h  libgstd_thread.c  libgstd_thread.h  meson.build
tests/: Makefile.am
tests/libgstd/: Makefile.am  meson.build  test_libgstd_debug  test_libgstd_debug.c  test_libgstd_element_get  test_libgstd_element_get.c  test_libgstd_element_set  test_libgstd_element_set.c  test_libgstd_manager  test_libgstd_manager.c  test_libgstd_pipeline_bus_wait  test_libgstd_pipeline_bus_wait.c  test_libgstd_pipeline_bus_wait_async  test_libgstd_pipeline_bus_wait_async.c  test_libgstd_pipeline_create  test_libgstd_pipeline_create.c  test_libgstd_pipeline_delete  test_libgstd_pipeline_delete.c  test_libgstd_pipeline_flush_start  test_libgstd_pipeline_flush_start.c  test_libgstd_pipeline_flush_stop  test_libgstd_pipeline_flush_stop.c  test_libgstd_pipeline_get_graph  test_libgstd_pipeline_get_graph.c  test_libgstd_pipeline_get_state  test_libgstd_pipeline_get_state.c  test_libgstd_pipeline_inject_eos  test_libgstd_pipeline_inject_eos.c  test_libgstd_pipeline_list  test_libgstd_pipeline_list.c  test_libgstd_pipeline_list_elements  test_libgstd_pipeline_list_elements.c  test_libgstd_pipeline_list_properties  test_libgstd_pipeline_list_properties.c  test_libgstd_pipeline_list_signals  test_libgstd_pipeline_list_signals.c  test_libgstd_pipeline_pause  test_libgstd_pipeline_pause.c  test_libgstd_pipeline_play  test_libgstd_pipeline_play.c  (+13 more)
